--- a/index.html
+++ b/index.html
@@ -3,119 +3,136 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-  <title>ENTROPY.DAT // RE:ITERATION</title>
+  <title>ENTROPY.DAT // KEYS</title>
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="data:,">
+  <style>
+    :root{
+      --bg:#050505;
+      --crt:#aaddaa;
+      --danger:#ff2a2a;
+      --warn:#ffcc00;
+      --dim:rgba(170,221,170,.28);
+    }
+    html,body{height:100%;margin:0;background:#020202;overflow:hidden;font-family:'VT323',monospace;color:var(--crt);user-select:none;-webkit-user-select:none;}
+    #main{position:relative;width:100%;height:100%;display:flex;align-items:center;justify-content:center;}
+    #frame{position:relative;width:900px;max-width:100vw;height:650px;max-height:100vh;background:#000;border:2px solid #333;box-shadow:0 0 50px rgba(0,0,0,.85);overflow:hidden;}
+    canvas{display:block;width:100%;height:100%;image-rendering:pixelated;}
+
+    .scanlines{position:absolute;inset:0;pointer-events:none;z-index:50;
+      background:linear-gradient(to bottom,rgba(255,255,255,0),rgba(255,255,255,0) 50%,rgba(0,0,0,.28) 50%,rgba(0,0,0,.28));
+      background-size:100% 4px;mix-blend-mode:overlay;opacity:.85;}
+    .vignette{position:absolute;inset:0;pointer-events:none;z-index:51;background:radial-gradient(circle,rgba(0,0,0,0) 48%,rgba(0,0,0,.85) 100%);}
+
+    #ui{position:absolute;inset:0;pointer-events:none;z-index:60;display:flex;flex-direction:column;justify-content:space-between;padding:16px;}
+    .row{display:flex;justify-content:space-between;gap:10px;}
+    .box{background:rgba(0,0,0,.68);border:1px solid var(--dim);padding:8px 10px;font-size:1.1rem;text-shadow:0 0 6px rgba(170,221,170,.25);max-width:46%;}
+    .bar{width:160px;height:8px;background:#222;border:1px solid #444;margin-top:4px;}
+    .fill{height:100%;background:var(--crt);width:100%;}
+    .fill.red{background:var(--danger);box-shadow:0 0 8px var(--danger);}
+    #hud-obj{color:var(--warn)}
+    #hud-log{opacity:.9}
+    #hud-stats{opacity:.9}
+
+    #menu{position:absolute;inset:0;z-index:200;background:rgba(0,0,0,.88);backdrop-filter:blur(4px);display:flex;align-items:center;justify-content:center;pointer-events:auto;}
+    .panel{border:2px solid var(--crt);background:#0d0d0d;padding:20px 18px;width:460px;max-width:92vw;text-align:center;box-shadow:0 0 22px rgba(170,221,170,.18);}
+    h1{font-size:3.2rem;margin:0 0 8px;letter-spacing:4px;}
+    p{margin:8px 0;color:#cfd8cf;opacity:.9;font-size:1.25rem}
+    label{display:block;margin-top:10px;opacity:.9}
+    input,select{font-family:'VT323';font-size:1.2rem;background:#000;color:var(--crt);border:1px solid #444;padding:8px;width:80%;max-width:360px}
+    button{font-family:'VT323';font-size:1.45rem;background:transparent;color:var(--crt);border:1px solid var(--crt);padding:10px 14px;cursor:pointer;margin:8px 6px;transition:.18s;}
+    button:hover{background:var(--crt);color:#000}
+    .small{font-size:1.05rem;opacity:.72}
+    .hidden{display:none!important;}
+
+    /* prompt */
+    #prompt{position:absolute;left:50%;bottom:18px;transform:translateX(-50%);z-index:170;pointer-events:none;}
+    #prompt .pbox{pointer-events:none;background:rgba(0,0,0,.78);border:1px solid var(--dim);padding:10px 12px;min-width:560px;max-width:92vw;}
+    #prompt .line{font-size:1.25rem;margin:2px 0;color:#e9f3e9}
+    #prompt .choice{color:#b8c7b8}
+    #promptBar{height:2px;background:var(--danger);width:100%;opacity:.9;margin-top:6px;}
+
+    /* face / hallucination overlay */
+    #flash{position:absolute;inset:0;z-index:120;pointer-events:none;mix-blend-mode:screen;opacity:0;transition:opacity .02s;}
+  </style>
 </head>
 <body>
-  <div id="main">
-    <div id="crt-frame" aria-label="ENTROPY.DAT CRT">
-      <canvas id="game" width="640" height="480"></canvas>
+<div id="main">
+  <div id="frame">
+    <div class="scanlines"></div>
+    <div class="vignette"></div>
+    <canvas id="game" width="640" height="480"></canvas>
 
-      <!-- CRT FX -->
-      <div class="scanlines"></div>
-      <div class="vignette"></div>
+    <div id="flash" class="hidden"></div>
 
-      <!-- HUD -->
-      <div id="ui" aria-hidden="true">
-        <div class="hud-row">
-          <div class="hud-box" id="hud-left">
-            <div id="hud-loc">LOC: …</div>
-            <div id="hud-obj" class="hud-warn">OBJ: …</div>
-            <div id="hud-mission" class="hud-dim">—</div>
-          </div>
-
-          <div class="hud-box" id="hud-right">
-            <div class="hud-label">OXYGEN</div>
-            <div class="bar"><div id="bar-oxy" class="fill"></div></div>
-            <div class="hud-label">SANITY</div>
-            <div class="bar"><div id="bar-san" class="fill red"></div></div>
-            <div class="hud-mini" id="hud-stats">…</div>
-          </div>
+    <div id="ui">
+      <div class="row">
+        <div class="box">
+          <div id="hud-loc">LOC: …</div>
+          <div id="hud-obj">OBJ: …</div>
+          <div id="hud-mission" class="small">—</div>
         </div>
-
-        <div class="hud-row bottom">
-          <div class="hud-box" id="hud-log">SYSTEM READY…</div>
-          <div class="hud-box" id="hud-ammo">—</div>
+        <div class="box">
+          <div>OXYGEN</div>
+          <div class="bar"><div id="bar-oxy" class="fill"></div></div>
+          <div style="margin-top:6px">SANITY</div>
+          <div class="bar"><div id="bar-san" class="fill red"></div></div>
         </div>
       </div>
 
-      <!-- MENU / INTRO -->
-      <div id="menu" class="overlay" role="dialog" aria-label="Start menu">
-        <div class="panel">
-          <h1>ENTROPY.DAT</h1>
-          <div class="sub">A facility that edits your choices while you watch.</div>
-
-          <div class="form">
-            <label>PROTAGONIST NAME</label>
-            <input id="nameInput" type="text" maxlength="16" placeholder="type a name…" autocomplete="off" />
-          </div>
-
-          <div class="form">
-            <label>ROLE</label>
-            <select id="roleSelect">
-              <option value="thief">THIEF (fast dash, low ammo)</option>
-              <option value="killer">KILLER (melee burst, unstable sanity)</option>
-              <option value="butcher">BUTCHER (slow, heavy hits, more oxygen tanks)</option>
-            </select>
-          </div>
-
-          <div class="form">
-            <label>DIFFICULTY (RANDOMIZED EACH RUN)</label>
-            <div class="sub tiny" id="diffPreview">…</div>
-          </div>
-
-          <div class="hint">
-            Controls: WASD/Arrows move · Shift sprint · <b>Space attack</b> · <b>E interact/pulse</b> · 1/2 answer prompts
-            <br/>Tip: Killing keeps you alive — and makes the place remember you.
-          </div>
-
-          <div class="row">
-            <button id="btnStart">INITIALIZE RUN</button>
-            <button id="btnMute" class="ghost">AUDIO: ON</button>
-          </div>
-
-          <div class="sub tiny" id="introLore">…</div>
+      <div class="row">
+        <div class="box">
+          <div id="hud-log">SYSTEM READY…</div>
+        </div>
+        <div class="box" style="text-align:right">
+          <div id="hud-ammo">AMMO: —</div>
+          <div id="hud-stats">VIT: —</div>
         </div>
       </div>
-
-      <!-- TERMINAL / CODE LOCK -->
-      <div id="terminal" class="overlay hidden" role="dialog" aria-label="Security terminal">
-        <div class="panel terminal">
-          <h2>SECURITY LOCK</h2>
-          <div class="sub">ENTER 3-DIGIT OVERRIDE</div>
-          <div class="code">
-            <input class="digit" id="d1" maxlength="1" inputmode="numeric" />
-            <input class="digit" id="d2" maxlength="1" inputmode="numeric" />
-            <input class="digit" id="d3" maxlength="1" inputmode="numeric" />
-          </div>
-          <div class="row">
-            <button id="btnExec">EXECUTE</button>
-            <button id="btnAbort" class="ghost">ABORT</button>
-          </div>
-          <div class="sub tiny" id="termHint">…</div>
-        </div>
-      </div>
-
-      <!-- PROMPT / LORE CHOICE -->
-      <div id="prompt" class="overlay hidden" role="dialog" aria-label="Lore prompt">
-        <div class="panel prompt">
-          <div id="promptText" class="prompt-text">…</div>
-          <div class="prompt-choices">
-            <div id="promptA">1) …</div>
-            <div id="promptB">2) …</div>
-          </div>
-          <div class="bar slim"><div id="promptBar" class="fill red"></div></div>
-          <div class="sub tiny">Press 1 / 2 (or Y / N)</div>
-        </div>
-      </div>
-
-      <!-- IMAGE FLASH OVERLAY -->
-      <div id="flash" class="flash hidden" aria-hidden="true"></div>
-
     </div>
-  </div>
 
-  <script type="module" src="./js/main.js"></script>
+    <div id="prompt" class="hidden">
+      <div class="pbox">
+        <div id="promptText" class="line"></div>
+        <div id="promptA" class="line choice"></div>
+        <div id="promptB" class="line choice"></div>
+        <div id="promptBar"></div>
+      </div>
+    </div>
+
+    <div id="menu">
+      <div class="panel">
+        <h1>ENTROPY.DAT</h1>
+        <p id="introLore">Type your name. Choose a role. Initialize.</p>
+
+        <label>PROTAGONIST NAME</label>
+        <input id="nameInput" maxlength="16" placeholder="e.g. MARA" />
+
+        <label style="margin-top:12px;">ROLE</label>
+        <select id="roleSelect">
+          <option value="thief">THIEF (Dash + escape)</option>
+          <option value="killer">KILLER (Fast strikes)</option>
+          <option value="butcher">BUTCHER (Heavy cleave)</option>
+        </select>
+
+        <div style="margin-top:10px" class="small">
+          Controls: WASD / Arrows · Shift sprint · Space attack · E interact
+        </div>
+
+        <div style="margin-top:10px">
+          <button id="btnStart">INITIALIZE RUN</button>
+          <button id="btnMute">AUDIO: ON</button>
+        </div>
+
+        <div class="small" style="margin-top:6px;opacity:.7">
+          Collect all keys → portal opens. Beware the “peasants”.
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<script type="module" src="./js/main.js"></script>
 </body>
 </html>
