--- a/index.html
+++ b/index.html
@@ -3,77 +3,70 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-  <title>ENTROPY.DAT // KEYRITE</title>
+  <title>ENTROPY.DAT</title>
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <div id="wrap">
-    <div id="crt">
+    <div id="frame">
       <canvas id="game" width="640" height="480"></canvas>
+
+      <div id="hud">
+        <div class="hudTop">
+          <div class="hudBox">
+            <div id="hud-loc">LOC: …</div>
+            <div id="hud-obj">OBJ: …</div>
+            <div id="hud-msg">…</div>
+          </div>
+
+          <div class="hudBox right">
+            <div id="hud-role">ROLE: …</div>
+            <div id="hud-keys">KEYS: 0/0</div>
+
+            <div class="barLabel">HP</div>
+            <div class="bar"><div id="bar-hp" class="fill hp"></div></div>
+
+            <div class="barLabel">OXY</div>
+            <div class="bar"><div id="bar-oxy" class="fill oxy"></div></div>
+
+            <div class="barLabel">SAN</div>
+            <div class="bar"><div id="bar-san" class="fill san"></div></div>
+          </div>
+        </div>
+
+        <div class="hudBottom">
+          <div class="hudBox">
+            <span class="dim">WASD/ARROWS move · SHIFT sprint · SPACE attack/shoot · E interact</span>
+          </div>
+        </div>
+      </div>
 
       <div class="scanlines"></div>
       <div class="vignette"></div>
-      <div class="chromaburn"></div>
 
-      <div id="hud">
-        <div class="hud-left">
-          <div class="box">
-            <div id="hud-loc">LOC: --</div>
-            <div id="hud-obj">OBJ: --</div>
-            <div id="hud-msg" class="msg">...</div>
-          </div>
-        </div>
-
-        <div class="hud-right">
-          <div class="box">
-            <div class="row">
-              <div>HP</div>
-              <div class="bar"><div id="bar-hp" class="fill hp"></div></div>
-            </div>
-            <div class="row">
-              <div>OXY</div>
-              <div class="bar"><div id="bar-oxy" class="fill oxy"></div></div>
-            </div>
-            <div class="row">
-              <div>SAN</div>
-              <div class="bar"><div id="bar-san" class="fill san"></div></div>
-            </div>
-            <div class="tiny" id="hud-keys">KEYS: 0/0</div>
-            <div class="tiny" id="hud-role">ROLE: --</div>
-          </div>
-        </div>
-      </div>
-
-      <div id="menu" role="dialog" aria-label="Start menu">
+      <div id="menu">
         <div class="panel">
           <div class="title">ENTROPY.DAT</div>
-          <div class="subtitle">Type your name. Choose a role. The maze will use both.</div>
+          <div class="sub">A record is being edited in real-time.</div>
 
-          <label class="lbl">PROTAGONIST NAME</label>
-          <input id="nameInput" type="text" maxlength="16" placeholder="type..." autocomplete="off" />
+          <label class="lab">PROTAGONIST NAME</label>
+          <input id="nameInput" class="inp" maxlength="16" placeholder="SUBJECT" />
 
-          <label class="lbl">ROLE</label>
-          <select id="roleSelect">
-            <option value="thief">THIEF — fast throws, lower HP</option>
-            <option value="killer">KILLER — pistol, balanced</option>
-            <option value="butcher">BUTCHER — cleaver shockwave, high HP</option>
+          <label class="lab">ROLE</label>
+          <select id="roleSelect" class="sel">
+            <option value="thief">THIEF (fast, weak shots)</option>
+            <option value="killer">KILLER (balanced)</option>
+            <option value="butcher">BUTCHER (slow, heavy)</option>
           </select>
 
-          <div class="difficulty">
-            <span>DIFFICULTY IS RANDOMIZED EACH RUN.</span>
-            <span class="tiny">More monsters / less oxygen / nastier tasks.</span>
-          </div>
+          <button id="btnStart" class="btn">INITIALIZE RUN</button>
 
-          <button id="btnStart">INITIALIZE</button>
-
-          <div class="controls">
-            WASD/Arrows move · Shift sprint · Space attack · E interact<br/>
-            Collect all KEYS → Enter PORTAL · Don’t suffocate.
+          <div class="tiny">
+            Tip: The maze is braided (loops). Oxygen is survivable. Shrines offer bargains.
           </div>
         </div>
       </div>
-
     </div>
   </div>
 
